Text wrap fix

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -20,8 +20,8 @@ body {
 }
 
 .wrap {
-	padding-left: 12px;
-	padding-right: 12px;
+	padding-left: 16px;
+	padding-right: 16px;
 
 	@media (min-width: 372px) {
 		padding-left: var(--gutter);
